--- a/old_public/index.html
+++ b/old_public/index.html
@@ -4,22 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--styles-->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&family=Hanuman:wght@300;400;900&family=Montserrat:wght@200;300;400;900&family=Space+Mono:wght@400;700&display=swap" />
-    <link rel="stylesheet" href="./styles/noodles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <!--scripts-->
     <script src="scripts/index.js" type="module"></script>
     <title>Welcome To Planet Oxy</title>
   </head>
   <body>
-    <section class="flex flex-col col-auto py-4 pt-2 pb-4 navbar__container">
-      <nav class="flex flex-row justify-between">
-        <a href="#" class="flex"
+    <section class="container navbar__container">
+      <nav class="d-flex navbar">
+        <a href="#" class="d-flex"
           ><img src="./assets/vectors/GLOBE.svg" alt=""
         /></a>
 
-        <ul class="flex flex-row gap-2 underline__list">
+        <ul class="d-flex flex-row underline__list">
           <li class=""><a href="#">blog</a></li>
           <li class=""><a href="#">projects</a></li>
           <li class=""><a href="#">contact</a></li>
@@ -65,17 +63,16 @@
           </ul>
         </div>
       </div>
-      </div>
 
+      <div class="container content--container">
         <!-- ANTIHERO -->
         <section
           id="antihero"
-          class="container grid grid-cols-2 justify-between items-center gap-2 m-auto mb-2 px-6"
+          class="d-flex flex-col flex-row-hd justify-between align-center gap-2 m-0 mb-2"
         >
-        <!-- terminal -->
-          <div id="terminal_window" class="terminal overflow-hidden col-span-full">
-            <div class="terminal__window__navbar">
-              <div style="display: flex;" class="terminal__title">
+          <div id="terminal_window" class="terminal overflow-hidden">
+            <div class="terminal__window__navbar d-flex">
+              <div class="terminal__title center-h d-flex gap-1-half">
                 <svg
                   class="terminal__icon"
                   viewBox="0 0 14 9"
@@ -159,13 +156,12 @@
                     fill="#72DB31"
                   />
                 </svg>
-                <p class="terminal-window__title">Terminal</p>
+                <p class="green center-h terminal-window-title">Terminal</p>
               </div>
-              <div class="terminal__navbar__controls ">
+              <div class="terminal__navbar__controls d-flex gap-1">
                 <button class="terminal__min">
                   <svg
-                    style="margin-top: auto;"
-                    class="terminal__control-icon"
+                    class="terminal__control-icon mt-auto"
                     viewBox="0 0 16 2"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
@@ -224,30 +220,30 @@
             <div
               id="terminal_screen"
               style="height: 75%"
-              class="terminal__screen"
+              class="terminal__screen overflow-auto pl-1 mt-1"
             >
-              <h6 class="terminal__art">
-                <pre class="terminal__art__ascii">
+              <h6 class="mt-none terminal-art">
+                <pre class="green terminal__art">
     ____  _       _ __        __   __  ___                 
    / __ \(_)___ _(_) /_____ _/ /  / / / (_)___  ____  (_)__ 
   / / / / / __ `/ / __/ __ `/ /  / /_/ / / __ \/ __ \/ / _ \
  / /_/ / / /_/ / / /_/ /_/ / /  / __  / / /_/ / /_/ / /  __/
 /_____/_/\__, /_/\__/\__,_/_/  /_/ /_/_/ .___/ .___/_/\___/ 
-        /____/                        /_/   /_/     © <span id="terminal-date">2023</span>
-           </pre>
+        /____/                        /_/   /_/     © <span id="terminal-date" class="green">2023</span>
+                  </pre>
               </h6>
 
               <p class="terminal__text">Welcome...</p>
-              <p class="terminal__text">For assistance, please type <strong class="terminal__text">Help</strong></p>
-              <div id="terminal_input_area_container" class="terminal__input-area__container">
+              <p class="terminal__text"></p>
+              <div id="terminal_input_area_container" class="d-flex flex-col">
                 <div
                   id="terminal_input_area"
                   data-rowid="0"
-                  class="terminal__cli"
+                  class="terminal__cli d-flex gap-1-half"
                 >
-                  <p class="terminal__text ">
+                  <p class="terminal__text center-h">
                     guest@<strong class="terminal__text"
-                      ><a href="https://www.digitalhippie.xyz" target="_blank" class="terminal__text"
+                      ><a href="https://www.digitalhippie.xyz" target="_blank"
                         >digitalhippie.xyz</a
                       ></strong
                     >:~$
@@ -263,13 +259,13 @@
           </div>
 
           <div
-            class="flex flex-col col-start-4 col-span-2 items-end md:items-center lg:items-end /align-start-tablet/ px-2-md w-16 w-max-md w-32-hd gap-6-hd"
+            class="d-flex flex-col align-end align-center-md align-end-hd align-start-tablet px-2-md w-16 w-max-md w-32-hd gap-6-hd"
           >
             <div
-              class="flex flex-col w-max w-14-md flex-row-hd justify-right"
+              class="d-flex flex-col w-max w-14-md flex-row-hd justify-right"
             >
-              <p class="text-nowrap">Hi, I'm</p>
-              <div class="flex flex-row justify-right">
+              <p class="nowrap">Hi, I'm</p>
+              <div class="d-flex flex-row justify-right">
                 <h1 class="font-2 font-xxl">ASHLEY</h1>
 
                 <div class="title__smiley">
@@ -278,7 +274,7 @@
               </div>
             </div>
 
-            <div class="w-max flex-tablet flex-col-hd gap-2">
+            <div class="w-max d-flex-tablet flex-col-hd gap-2">
               <p
                 class="mb-2 mb-auto-tablet text-justify font-lg-tablet font-md-hd text-right-hd"
               >
@@ -287,7 +283,7 @@
               </p>
 
               <div
-                class="w-max flex flex-row flex-col-tablet gap-1 justify-even align-end"
+                class="w-max d-flex flex-row flex-col-tablet gap-1 justify-even align-end"
               >
                 <button class="btn-primary-sm btn-primary-lg-tablet">
                   <a href="">PROJECTS</a>
@@ -314,19 +310,16 @@
         </section>
 
         <!-- about me -->
-        <!-- <section
-          class="flex flex-col pt-1 px-2-md flex-row-tablet gap-2 justify-between mb-2-hd"
-        > -->
         <section
-          class="container grid grid-cols-2 justify-between items-center gap-2 m-auto mb-2 px-6"
+          class="d-flex flex-col pt-1 px-2-md flex-row-tablet gap-2 justify-between mb-2-hd"
         >
-          <div id="about_me" class="w-full">
+          <div id="about_me" class="w-max">
             <h2
               style="word-spacing: -0.5rem"
               id="about_me_headline"
-              class="mb-half text- kern-6 font-xxl"
+              class="mb-half font-chintzy kern-6 font-xxl"
             >
-              A <strong class="text-dh-orange font-chintzy font-xxl">Bit</strong> About
+              A <strong class="orange font-chintzy font-xxl">Bit</strong> About
               Me
             </h2>
             <p class="paragraph w-max w-sixth-hd mb-2">
@@ -337,7 +330,7 @@
             </p>
 
             <div class="skills w-max mb-1">
-              <h3 class="text-dh-orange">Technologies I've worked with</h3>
+              <h3 class="orange">Technologies I've worked with</h3>
               <ul class="list flow-hide">
                 <li>Angular</li>
                 <li>ASP.NET</li>
@@ -387,10 +380,10 @@
     </div>
 
     <footer
-      class="flex flex-row gap-4 gap-2-tablet gap-3-hd justify-between items-center px-2 px-5-md py-1 px-18-tablet px-25-hd px-35-uhd"
+      class="d-flex flex-row gap-4 gap-2-tablet gap-3-hd justify-between align-center px-2 px-5-md py-1 px-18-tablet px-25-hd px-35-uhd"
     >
       <!-- <p>something</p> -->
-      <div id="socials" class="flex flex-row gap-1 items-center">
+      <div id="socials" class="d-flex d-flex-row gap-1 align-center">
         <a target="_blank" href="https://digitalhippie.xyz"
           ><img
             style="width: 1.4rem"
