--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <!--styles-->
     <link rel="icon" type="image/x-icon" href="./assets/vectors/GLOBE.svg" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&family=Hanuman:wght@300;400;900&family=Montserrat:wght@200;300;400;900&family=Space+Mono:wght@400;700&display=swap"
