--- a/src/app.html
+++ b/src/app.html
@@ -6,11 +6,11 @@
     <link rel="icon" type="image/x-icon" href="./assets/vectors/GLOBE.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&family=Hanuman:wght@300;400;900&family=Montserrat:wght@200;300;400;900&family=Space+Mono:wght@400;700&display=swap"
-    />
-    <link rel="stylesheet" href="styles/style.css" />
+    /> -->
+    <!-- <link rel="stylesheet" href="styles/style.css" /> -->
     <script
       src="https://kit.fontawesome.com/b156652d59.js"
       crossorigin="anonymous"
@@ -19,7 +19,7 @@
     <title>Welcome To Planet Oxy</title>
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="bg-black-dh bg-light">
+  <body data-sveltekit-preload-data="hover" class="bg-dh-black">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
