--- a/src/app.html
+++ b/src/app.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" style="scrollbar-width: none" class="scroll-smooth">
-  <head>
-    <meta charset="utf-8" />
-    <!--styles-->
-    <link rel="icon" type="image/x-icon" href="./assets/vectors/GLOBE.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- <link
+
+<head>
+  <meta charset="utf-8" />
+  <!--styles-->
+  <link rel="icon" type="image/x-icon" href="./assets/vectors/GLOBE.svg" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <!-- <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&family=Hanuman:wght@300;400;900&family=Montserrat:wght@200;300;400;900&family=Space+Mono:wght@400;700&display=swap"
     /> -->
-    <!-- <link rel="stylesheet" href="styles/style.css" /> -->
-    <script
-      src="https://kit.fontawesome.com/b156652d59.js"
-      crossorigin="anonymous"
-    ></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Welcome To Planet Oxy</title>
-    %sveltekit.head%
-  </head>
-  <body data-sveltekit-preload-data="hover" class="bg-dh-black">
-    <div style="display: contents">%sveltekit.body%</div>
-  </body>
+  <!-- <link rel="stylesheet" href="styles/style.css" /> -->
+  <script src="https://kit.fontawesome.com/b156652d59.js" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Welcome To Planet Oxy</title>
+  %sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover" class="bg-dh-black ">
+  <div>%sveltekit.body%</div>
+</body>
+
 </html>
